expose mongodb ports to the host

--- a/stack.yaml
+++ b/stack.yaml
@@ -11,6 +11,8 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: root 
             MONGO_INITDB_ROOT_PASSWORD: password 
+        ports:
+            - 27017-27019:27017-27019
     mongo-express:
         container_name: mongo-express
         image: mongo-express
